# dumb-udev

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versioninfo.py
.github/workflows/: build_all_packages_ci.yml
dumb_udev/: __init__.py  __main__.py  metadata.py  service.py
