[metadata]
name = dumb_udev
license = GPLv3
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True

[pycodestyle]
max-line-length = 127
statistics = True
exclude = venv/**,.idea/**
show-pep8 = False
show-source = False

[flake8]
max-line-length = 127
exclude = venv/**,.idea/**
